--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <script src="p5.js"></script>
-    <script src="https://unpkg.com/p5.js-svg@1.1.1"></script>
-    <script src="lodash.js"></script>
-    <script src="swisstopo.js"></script>
+    <script src="swisstops.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <meta charset="utf-8" />
